$Id$

User-visible changes in version 0.8.8  (2009-06-21):
* added two flags to the configure script: --with-xylib and --with-samples
  (xylib from the fityk tarball is not used by default now)

User-visible changes in version 0.8.7  (2009-06-10):
* fityk license was changed from GPLv2 to GPLv2+ (2 or at your option any later)
* all config files are stored in a single directory:
       Unix: ~/.fityk
    Windows: C:\Documents and Settings\username\Application Data\fityk
        Mac: ~/Library/Application Support/fityk
  This changes the path to the default and alt. configs on Windows and Mac.
* now works also with GCC 4.4 and Boost 1.35
* minimum wxWidgets version increased to 2.8.0
* added functions LogNormal and LogNormalA (Mirko Scholz)
* abs() can be used in user-defined functions
* added syntax for loading data from all columns in file: file.csv:1:2..::
* bug fixes, most notably bugs with saving/loading session

User-visible changes in version 0.8.6  (2008-04-15):
* bug fixes (drawing baseline, "zoom all" with log scale)
* GUI: parameters (at the bottom of the sidebar) can be changed with Page-Up
  and Page-Down keys or with mouse wheel. Shift, Ctrl, Alt keys modify speed.
* GUI: two buttons added to the "functions" pane in the sidebar. They make 
  HWHM and shape equal for all functions (works only with a few function types)

User-visible changes in version 0.8.5  (2008-03-17):
* minor changes in syntax: 
    info @0             ->   info data in @0
    info @0.title       ->   info title in @0
    info @0.filename    ->   info filename in @0
    @0.title = abc      ->   set @0.title = abc
    @+                  ->   @+ = 0
    @0.revert           ->   @0 < .
   data is exported with "info" now: info @n ( expr1, ... ) > filename
     where: columns have to be given, @* can be used, F() and Z() can 
            be used without "@n." prefix,  *F() can not be used.
* xylib: RIET7/LHPM/CSRIET/ILL_D1A5/PSI_DMC .dat filetypes added