@@ -32,7 +32,6 @@ extern std::vector<std::string> vt, vr;
 extern std::vector<int> vn, vds;
 extern const int new_dataset;
 extern const int all_datasets;
-extern bool outdated_plot;
 extern bool no_info_output;
 extern std::string prepared_info;
 
